# livescene

./: CMakeLists.txt  ProjectHome.md
CMakeModules/: CMakeMacros.cmake  FindOSGWorks.cmake  Findlibfreenect.cmake
doc/: doxyfile.cmake
include/liblivescene/: Background.h  Detect.h  Device.h  DeviceCapabilities.h  DeviceFactory.h  DeviceFreenect.h  DeviceManager.h  Export.h  GeometryBuilder.h  Image.h  UserInteraction.h  Version.h  osgGeometry.h
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/noop/: CMakeLists.txt  noop.cpp
src/examples/osgbase/: CMakeLists.txt  osgbase.cpp
src/examples/osgdeviceapi/: CMakeLists.txt  osgdeviceapi.cpp
src/examples/osglivesceneview/: CMakeLists.txt  osglivesceneview.cpp
src/examples/osgsimpledepth/: CMakeLists.txt  osgsimpledepth.cpp
src/examples/osgsimplergb/: CMakeLists.txt  osgsimplergb.cpp
src/examples/osgsimpleui/: CMakeLists.txt  osgsimpleui.cpp
src/examples/osgui/: CMakeLists.txt  osgui.cpp
src/liblivescene/: Background.cpp  CMakeLists.txt  Detect.cpp  DeviceCapabilitiesImage.cpp  DeviceFactory.cpp  DeviceFreenect.cpp  DeviceManager.cpp  GeometryBuilder.cpp  Image.cpp  UserInteraction.cpp  Version.cpp  osgGeometry.cpp
src/tests/: CMakeLists.txt
src/tests/hosttransform/: CMakeLists.txt  hosttransform.cpp
